--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -458,6 +458,7 @@
                 <button id="chat-stop-btn" class="chat-send-btn chat-stop-btn hidden">Stop</button>
             </div>
         </div>
+        <div id="robot-panel" class="robot-panel"></div>
     </div>
 
 </main>
@@ -660,6 +661,7 @@
 <script src="/static/setbuilder.js"></script>
 <script src="/static/phases.js"></script>
 <script src="/static/autoset.js"></script>
+<script src="/static/robot.js"></script>
 <script src="/static/chat.js"></script>
 </body>
 </html>
