--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -322,7 +322,28 @@
             <div class="dance-main">
                 <div id="robot-panel" class="dance-robot-panel"></div>
             </div>
-            <div id="dance-controls-sidebar" class="dance-controls-sidebar"></div>
+        </div>
+        <!-- Dance player bar (fixed bottom) -->
+        <div id="dance-player" class="dance-player">
+            <img id="dance-pl-artwork" class="dance-pl-artwork" alt="" src="">
+            <div class="dance-pl-info">
+                <div id="dance-pl-title" class="dance-pl-title"></div>
+                <div id="dance-pl-artist" class="dance-pl-artist"></div>
+            </div>
+            <div class="dance-pl-controls">
+                <button id="dance-pl-prev" class="dance-pl-btn" title="Previous">&#9664;&#9664;</button>
+                <button id="dance-pl-play" class="dance-pl-btn dance-pl-btn-main" title="Play">&#9654;</button>
+                <button id="dance-pl-next" class="dance-pl-btn" title="Next">&#9654;&#9654;</button>
+            </div>
+            <div class="dance-pl-progress-wrap">
+                <div id="dance-pl-progress-bar" class="dance-pl-progress-bar">
+                    <div id="dance-pl-progress-fill" class="dance-pl-progress-fill"></div>
+                </div>
+                <div class="dance-pl-time">
+                    <span id="dance-pl-current">0:00</span>
+                    <span id="dance-pl-duration">0:00</span>
+                </div>
+            </div>
         </div>
     </div>
 
