--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -322,6 +322,8 @@
             <div class="dance-main">
                 <div id="robot-panel" class="dance-robot-panel"></div>
             </div>
+            <!-- Settings drawer (slides from right) -->
+            <div id="dance-settings-drawer" class="dance-settings-drawer"></div>
         </div>
         <!-- Dance player bar (fixed bottom) -->
         <div id="dance-player" class="dance-player">
@@ -344,6 +346,7 @@
                     <span id="dance-pl-duration">0:00</span>
                 </div>
             </div>
+            <button id="dance-settings-btn" class="dance-settings-btn" title="Robot Settings">&#9881;</button>
         </div>
     </div>
 
