--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -454,7 +454,7 @@
 
     <!-- ═══ Tab: Chat ═══ -->
     <div id="tab-chat" class="tab-content hidden">
-        <div class="chat-layout">
+        <div class="chat-layout chat-centered">
             <div class="chat-messages" id="chat-messages">
                 <div class="chat-welcome">
                     <h3>Music Collection Chat</h3>
