--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -324,7 +324,12 @@
                 <button id="dance-settings-btn" class="dance-settings-btn" title="Robot Settings">&#9881;</button>
             </div>
             <!-- Settings drawer (slides from right) -->
-            <div id="dance-settings-drawer" class="dance-settings-drawer"></div>
+            <div id="dance-settings-drawer" class="dance-settings-drawer">
+                <div class="dance-settings-header">
+                    <h3>Robot Settings</h3>
+                    <button id="dance-settings-close" class="dance-settings-close" title="Close">&times;</button>
+                </div>
+            </div>
         </div>
     </div>
 
